--- a/Capitoli/Abstract/abstract.tex
+++ b/Capitoli/Abstract/abstract.tex
@@ -3,9 +3,12 @@
 Negli ultimi anni, il paradigma del Cloud Computing ha ottenuto grande successo grazie ai numerosi vantaggi che esso offre.
 I motivi del suo successo sono ampliamente giustificati dal grande numero di vantaggi che ha portato. 
 Tra questi, il più importante consiste nella possibilità di accedere a diversi tipi di risorse hardware e software mediante un paradigma
-basato sui servizi. 
-Kubernetes è una piattaforma portatile, estensibile e open-source per la gestione e l'orchestrazione di applicativi Cloud-Native,
-ovvero applicativi svilluppati appositamente per essere utilizzati in ambienti Cloud. 
+basato sui servizi basati su processi containerizzati.
+La portabilità e la riproducibilità di un processo containerizzato offre l'opportunità di spostare e scalare le applicazioni tra cloud e data center. 
+I container garantiscono efficacemente che tali applicazioni vengano eseguite allo stesso modo ovunque, consentendoci di sfruttare rapidamente e facilmente tutti questi ambienti.
+Inoltre, man mano che le applicazioni vengono scalate, abbiamo bisogno di alcuni strumenti per automatizzare la manutenzione di tali applicazioni come ad esempio Kubernetes.
+Kubernetes è una piattaforma portatile, estensibile e open-source per la gestione e l'automazione di applicativi Cloud-Native,
+ovvero applicativi basati su processi containerizzati e svilluppati appositamente per essere utilizzati in ambienti Cloud. 
 Esso consente di orchestrare applicazioni containerizzate all'interno di cluster di nodi su cui vengono eseguiti, grazie agli strumenti ed alle API fornite, operazioni per la gestione del carico di lavoro, 
 del traffico di rete e dell'archiviazione. 
 Nonostante i vantaggi, Kubernetes rimane un sistema estremamente complesso ed articolato da utilizzare, necessitando di conoscenze specifiche per essere usato in modo efficace.
