--- a/Capitoli/Introduzione/4docker.tex
+++ b/Capitoli/Introduzione/4docker.tex
@@ -18,3 +18,5 @@ quale vengono aggiunte le configurazioni necessarie e peculiari dell’applicazi
 di un’immagine avviene all’interno di un file, chiamato Dockerfile, nel quale vengono indicate
 le istruzioni, ognuna delle quali aggiunge un layer all’interno dell’immagine finale, in modo tale
 che, di volta in volta, vengano ricompilati solo gli strati che effettivamente sono stati modificati.
+Sebbene Docker sia un potente strumento di sviluppo e di gestione degli ambienti containerizzati, presenta grosse limitazioni che non consentono un'efficace gestione,scalabilità e manutenzione degli applicativi.
+A partire da questa necessità, sono quindi nate le più conosciute soluzioni di container orchestration, tra cui Kubernetes.
